tests/valid/borrow/borrow_linear_shared_then_drop.facet
fn f(x: linear isize) -> unrestricted () {
    let r: unrestricted &linear isize = (&x) in
    (drop x)
}
